[tool.poetry]
name = "homelogger"
version = "0.1.0"
description = ""
authors = ["Lewin <lewinkoon+github@gmail.com>"]
readme = "readme.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
esphome = "^2024.10.2"
pillow = "10.2.0"
setuptools = "^75.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
